--- a/package.json
+++ b/package.json
@@ -12,41 +12,16 @@
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
-    "analyze:clean": "rimraf stats.json",
-    "preanalyze": "npm run analyze:clean",
-    "analyze": "node ./internals/scripts/analyze.js",
-    "extract-intl": "babel-node --presets latest,stage-0 -- ./internals/scripts/extract-intl.js",
-    "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "preinstall": "npm run npmcheckversion",
-    "postinstall": "npm run build:dll",
-    "prebuild": "npm run build:clean && npm run test",
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p; babel server -d dist --presets es2015,stage-2",
-    "build:clean": "npm run test:clean && rimraf ./build",
-    "build:dll": "node ./internals/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development nodemon server --exec babel-node --presets es2015,stage-2",
-    "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
-    "start:production": "npm run build && npm run start:prod",
-    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
-    "pagespeed": "node ./internals/scripts/pagespeed.js",
-    "presetup": "npm i chalk shelljs",
-    "setup": "node ./internals/scripts/setup.js",
-    "postsetup": "npm run build:dll",
-    "clean": "shjs ./internals/scripts/clean.js",
-    "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
-    "generate": "plop --plopfile internals/generators/index.js",
-    "lint": "npm run lint:js && npm run lint:css",
-    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
-    "lint:js": "npm run lint:eslint -- . ",
-    "lint:css": "stylelint ./app/**/*.css",
-    "lint:staged": "lint-staged",
-    "pretest": "npm run test:clean && npm run lint",
-    "test:clean": "rimraf ./coverage",
-    "test": "cross-env NODE_ENV=test karma start internals/testing/karma.conf.js --single-run",
-    "test:watch": "npm run test -- --auto-watch --no-single-run",
-    "test:firefox": "npm run test -- --browsers Firefox",
-    "test:safari": "npm run test -- --browsers Safari",
-    "test:ie": "npm run test -- --browsers IE",
-    "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
+    "start": "npm run dev",
+    "dev": "npm-run-all development-prepare-server-build development",
+    "development": "npm-run-all --parallel development-build-client development-build-server development-server",
+    "development-prepare-server-build": "universal-webpack --settings ./webpack/universal-webpack-settings.js prepare",
+    "development-build-client": "node ./webpack/webpack-dev-server.entry.js",
+    "development-build-server": "webpack --config ./webpack/webpack.config.server.development.entry.js --watch --colors --display-error-details",
+    "development-web-server": "nodemon ./server/index --watch ./server",
+    "development-web-server-delayed": "npm-run-all delay delay development-web-server",
+    "development-server": "npm-run-all --parallel development-web-server-delayed",
+    "delay": "node ./code/sleep 500"
   },
   "lint-staged": {
     "*.js": "lint:eslint",
@@ -205,11 +180,12 @@
     ]
   },
   "dependencies": {
-    "babel-polyfill": "6.13.0",
+    "babel-polyfill": "^6.13.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "2.0.1",
     "express": "4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fontfaceobserver": "2.0.4",
     "immutable": "3.8.1",
     "intl": "1.2.4",
@@ -217,8 +193,10 @@
     "ip": "1.1.3",
     "lodash": "4.15.0",
     "minimist": "1.2.0",
+    "npm-run-all": "^3.1.1",
     "react": "15.3.1",
     "react-dom": "15.3.1",
+    "react-ga": "^2.1.2",
     "react-helmet": "3.1.0",
     "react-intl": "2.1.5",
     "react-redux": "4.4.5",
@@ -227,11 +205,13 @@
     "react-router-scroll": "0.3.2",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
+    "redux-persist": "^4.0.0-alpha6",
     "redux-saga": "0.11.1",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
+    "universal-webpack": "^0.1.40",
     "warning": "3.0.0",
     "webpack-isomorphic-tools": "^2.6.3",
     "whatwg-fetch": "1.0.0"
@@ -241,15 +221,20 @@
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "2.0.1",
     "babel-plugin-react-intl": "2.2.0",
-    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-react-display-name": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "6.14.0",
-    "babel-preset-react": "6.11.1",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -300,6 +285,8 @@
     "postcss-reporter": "1.4.1",
     "pre-commit": "1.1.3",
     "psi": "2.0.4",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
     "rimraf": "2.5.4",
     "shelljs": "0.7.4",
     "sinon": "2.0.0-pre",
