--- a/package.json
+++ b/package.json
@@ -11,17 +11,70 @@
   },
   "author": "Max Stoiber",
   "license": "MIT",
+  "main": "bin/server.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "npm-run-all development-prepare-server-build development",
-    "development": "npm-run-all --parallel development-build-client development-build-server development-server",
-    "development-prepare-server-build": "universal-webpack --settings ./webpack/universal-webpack-settings.js prepare",
-    "development-build-client": "node ./webpack/webpack-dev-server.entry.js",
-    "development-build-server": "webpack --config ./webpack/webpack.config.server.development.entry.js --watch --colors --display-error-details",
-    "development-web-server": "nodemon ./server/index --watch ./server",
-    "development-web-server-delayed": "npm-run-all delay delay development-web-server",
-    "development-server": "npm-run-all --parallel development-web-server-delayed",
-    "delay": "node ./code/sleep 500"
+    "start": "concurrently --kill-others \"npm run start-prod\"",
+    "start-prod": "better-npm-run start-prod",
+    "build": "better-npm-run build",
+    "postinstall": "npm run build",
+    "lint": "eslint -c .eslintrc app",
+    "start-dev": "better-npm-run start-dev",
+    "build-dev": "better-npm-run build-dev",
+    "watch-client": "better-npm-run watch-client",
+    "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run start-dev\"",
+    "test": "jest"
+  },
+  "jest": {
+    "globals": {
+      "__SERVER__": false
+    },
+    "moduleFileExtensions": [
+      "",
+      "json",
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "src",
+      "node_modules"
+    ]
+  },
+  "betterScripts": {
+    "start-prod": {
+      "command": "node ./bin/server.js",
+      "env": {
+        "NODE_PATH": "./server",
+        "NODE_ENV": "production"
+      }
+    },
+    "start-dev": {
+      "command": "node ./bin/server.js",
+      "env": {
+        "NODE_PATH": "./server",
+        "NODE_ENV": "development",
+        "PORT": 3000
+      }
+    },
+    "watch-client": {
+      "command": "node webpack/webpack-dev-server.js",
+      "env": {
+        "UV_THREADPOOL_SIZE": 100,
+        "NODE_PATH": "./server",
+        "PORT": 3000
+      }
+    },
+    "build-dev": {
+      "command": "webpack --verbose --colors --display-error-details --config webpack/dev.config.js",
+      "env": {
+        "NODE_ENV": "development"
+      }
+    },
+    "build": {
+      "command": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    }
   },
   "lint-staged": {
     "*.js": "lint:eslint",
@@ -180,20 +233,29 @@
     ]
   },
   "dependencies": {
+    "babel-eslint": "^7.0.0",
     "babel-polyfill": "^6.13.0",
+    "better-npm-run": "0.0.13",
+    "bootstrap-loader": "^1.0.10",
+    "bootstrap-sass": "^3.3.5",
     "chalk": "1.1.3",
+    "clean-webpack-plugin": "^0.1.13",
     "compression": "1.6.2",
+    "concurrently": "^3.1.0",
     "cross-env": "2.0.1",
+    "eslint-loader": "^1.0.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "font-awesome-webpack": "0.0.4",
     "fontfaceobserver": "2.0.4",
     "immutable": "3.8.1",
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "less": "^2.7.1",
     "lodash": "4.15.0",
     "minimist": "1.2.0",
-    "npm-run-all": "^3.1.1",
+    "precss": "^1.4.0",
     "react": "15.3.1",
     "react-dom": "15.3.1",
     "react-ga": "^2.1.2",
@@ -208,9 +270,12 @@
     "redux-persist": "^4.0.0-alpha6",
     "redux-saga": "0.11.1",
     "reselect": "2.5.4",
+    "resolve-url-loader": "^1.6.0",
     "sanitize.css": "4.1.0",
+    "sass": "^0.5.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
+    "strip-loader": "^0.1.2",
     "universal-webpack": "^0.1.40",
     "warning": "3.0.0",
     "webpack-isomorphic-tools": "^2.6.3",
@@ -242,15 +307,14 @@
     "chai-enzyme": "0.5.1",
     "cheerio": "0.22.0",
     "coveralls": "2.11.13",
-    "css-loader": "0.25.0",
+    "css-loader": "^0.25.0",
     "enzyme": "2.4.1",
-    "eslint": "3.5.0",
-    "eslint-config-airbnb": "11.1.0",
-    "eslint-config-airbnb-base": "7.1.0",
-    "eslint-import-resolver-webpack": "0.6.0",
-    "eslint-plugin-import": "1.15.0",
-    "eslint-plugin-jsx-a11y": "2.2.2",
-    "eslint-plugin-react": "6.2.2",
+    "eslint": "2.13.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-loader": "^1.0.0",
+    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.20.2",
     "expect-jsx": "2.6.0",
@@ -275,6 +339,7 @@
     "lint-staged": "3.0.2",
     "mocha": "3.0.2",
     "ngrok": "2.2.2",
+    "node-sass": "^3.4.2",
     "nodemon": "^1.11.0",
     "null-loader": "0.1.1",
     "offline-plugin": "3.4.2",
@@ -283,6 +348,7 @@
     "postcss-focus": "1.0.0",
     "postcss-loader": "0.13.0",
     "postcss-reporter": "1.4.1",
+    "postcss-smart-import": "^0.4.4",
     "pre-commit": "1.1.3",
     "psi": "2.0.4",
     "react-transform-catch-errors": "^1.0.2",
