--- a/package.json
+++ b/package.json
@@ -233,6 +233,7 @@
     ]
   },
   "dependencies": {
+    "asyncawait": "^1.0.6",
     "babel-eslint": "^7.0.0",
     "babel-polyfill": "^6.13.0",
     "better-npm-run": "0.0.13",
@@ -290,6 +291,8 @@
     "babel-plugin-istanbul": "2.0.1",
     "babel-plugin-react-intl": "2.2.0",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-display-name": "^6.8.0",
@@ -303,6 +306,7 @@
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
     "chai": "3.5.0",
     "chai-enzyme": "0.5.1",
     "cheerio": "0.22.0",
@@ -325,6 +329,7 @@
     "html-webpack-plugin": "2.22.0",
     "image-webpack-loader": "2.0.0",
     "imports-loader": "0.6.5",
+    "isomorphic-style-loader": "^1.0.0",
     "json-loader": "0.5.4",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
