--- a/package.json
+++ b/package.json
@@ -274,6 +274,7 @@
     "resolve-url-loader": "^1.6.0",
     "sanitize.css": "4.1.0",
     "sass": "^0.5.0",
+    "scroll-behavior": "^0.8.2",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
     "strip-loader": "^0.1.2",
@@ -285,8 +286,8 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "6.14.0",
-    "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.5",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "2.0.1",
     "babel-plugin-react-intl": "2.2.0",
@@ -300,13 +301,15 @@
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-typecheck": "^3.9.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
+    "babel-runtime": "^6.18.0",
     "chai": "3.5.0",
     "chai-enzyme": "0.5.1",
     "cheerio": "0.22.0",
@@ -329,7 +332,7 @@
     "html-webpack-plugin": "2.22.0",
     "image-webpack-loader": "2.0.0",
     "imports-loader": "0.6.5",
-    "isomorphic-style-loader": "^1.0.0",
+    "isomorphic-style-loader": "^1.1.0",
     "json-loader": "0.5.4",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
