--- a/package.json
+++ b/package.json
@@ -247,6 +247,7 @@
     "eslint-loader": "^1.0.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "fbjs": "^0.8.5",
     "font-awesome-webpack": "0.0.4",
     "fontfaceobserver": "2.0.4",
     "immutable": "3.8.1",
@@ -310,6 +311,8 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-runtime": "^6.18.0",
+    "bootstrap-loader": "^1.2.1",
+    "bootstrap-sass": "^3.3.7",
     "chai": "3.5.0",
     "chai-enzyme": "0.5.1",
     "cheerio": "0.22.0",
@@ -347,7 +350,7 @@
     "lint-staged": "3.0.2",
     "mocha": "3.0.2",
     "ngrok": "2.2.2",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
     "null-loader": "0.1.1",
     "offline-plugin": "3.4.2",
@@ -361,13 +364,15 @@
     "psi": "2.0.4",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
+    "resolve-url-loader": "^1.6.0",
     "rimraf": "2.5.4",
+    "sass-loader": "^4.0.2",
     "shelljs": "0.7.4",
     "sinon": "2.0.0-pre",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.1",
     "stylelint": "7.2.0",
     "stylelint-config-standard": "13.0.0",
-    "url-loader": "0.5.7",
+    "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.22",
     "webpack-dev-middleware": "1.8.0",
     "webpack-hot-middleware": "2.12.2"
