--- a/package.json
+++ b/package.json
@@ -255,6 +255,7 @@
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "isomorphic-fetch": "^2.2.1",
     "less": "^2.7.1",
     "lodash": "4.15.0",
     "minimist": "1.2.0",
