--- a/package.json
+++ b/package.json
@@ -375,7 +375,7 @@
     "stylelint": "7.2.0",
     "stylelint-config-standard": "13.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.22",
+    "webpack": "^1.13.3",
     "webpack-dev-middleware": "1.8.0",
     "webpack-hot-middleware": "2.12.2"
   }
