--- a/package.json
+++ b/package.json
@@ -247,7 +247,7 @@
     "cross-env": "2.0.1",
     "eslint-loader": "^1.0.0",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fbjs": "^0.8.5",
     "font-awesome-webpack": "0.0.4",
     "fontfaceobserver": "2.0.4",
@@ -296,6 +296,7 @@
     "babel-plugin-react-intl": "2.2.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-system-import-transformer": "^2.4.0",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
@@ -331,7 +332,7 @@
     "expect": "1.20.2",
     "expect-jsx": "2.6.0",
     "exports-loader": "0.6.3",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.22.0",
